Remove icon view from layout when no icon available.

Previously, |icon_view_| was created even if the notification
does not have an icon, and changing is visibility by
icon_view_->SetVisible().
However, ProportionalImageView always returns the fixed image size
and FillLayout does not take visibility into account. As a result,
|right_content_| always occupied the right side even if there is
no icon.

By this CL, the behavior is changed as follows:
* When icon is available,
  * icon_view_->visible() always returns true.
  * right_content_->visible() may return false.
    (in case of use_image_for_icon)
* When icon is not available,
  * icon_view_ is null.
  * right_content_->visible() always returns false.

Before: http://screen/5KwSgEQQBaH
After: http://screen/ym6upUfc1qc
(Pressing Shift-Esc to show the notification)

TEST=message_center_unittests
BUG=785589

Change-Id: Ie3c133c82947681565cd07ddfada0c17a87dc591
Reviewed-on: https://chromium-review.googlesource.com/891079
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533079}
Former-commit-id: ecc9db734979ea7db10a7add238984af49113e1e